; ModuleID = '/home/carl/AnghaBench/linux/drivers/atm/extr_ambassador.c_rd_plain.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/atm/extr_ambassador.c_rd_plain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@DBG_FLOW = common dso_local global i32 0, align 4
@DBG_REGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"rd: %08zx -> %08x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i64)* @rd_plain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rd_plain(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add i64 %8, %9
  %11 = call i32 @inl(i64 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @DBG_FLOW, align 4
  %13 = load i32, i32* @DBG_REGS, align 4
  %14 = or i32 %12, %13
  %15 = load i64, i64* %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @PRINTD(i32 %14, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @inl(i64) #1

declare dso_local i32 @PRINTD(i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
